# news

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  STRUCTURE.md  docker-compose.yml  env.example  main.py  pyproject.toml  sum_numbers.py  test_api_key.py
lab/: lab1.md
scripts/: run_tests.sh
src/: __init__.py  article_scraper_service.py  config.py  kafka_producer.py  models.py  news_api_client.py  news_polling_service.py
src/clients/: __init__.py  kafka_client.py  news_api_client.py  redis_client.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  kafka.py  news.py
src/services/: __init__.py  article_scraper_service.py  news_polling_service.py
src/utils/: __init__.py  logging.py
tests/: test_news_api_client.py
